update overflow hidden

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="relative overflow-x-hidden w-full">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="dist/css/output.css">
 </head>
-<body class="bg-[#050505] text-white overflow-x-hidden font-dmsans">
+<body class="bg-[#050505] text-white overflow-x-hidden font-dmsans relative w-full">
     <!-- header start -->
     <header class="w-full bg-transparent">
         <div class="flex justify-between items-center">
@@ -34,7 +34,6 @@
     <!-- hero section start -->
     <section id="hero relative">
         <img src="dist/img/Icosahedron.png" alt="" class="absolute -z-10 blur-sm w-72">
-        <img src="dist/img/Icosahedron.png" alt="" class="absolute -z-10 blur-sm -right-32 w-[400px] bottom-6">
         <div class="px-1 py-24 text-center w-full">
             <p class="opacity-60 font-dmsans">WELCOME TO CRONOS</p>
             <h1 class="mt-10">The Internet of<br>Blockchains.</h1>
