add overflow hidden

--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
     <!-- header end -->
 
     <!-- hero section start -->
-    <section id="hero relative">
-        <img src="dist/img/Icosahedron.png" alt="" class="absolute -z-10 blur-sm w-72">
+    <section id="hero" class="relative">
+        <img src="dist/img/Icosahedron.png" alt="" class="absolute -z-10 blur-sm w-40 lg:w-72">
+        <img src="dist/img/Icosahedron.png" alt="" class="absolute -z-10 blur-sm w-32 lg:w-72 right-0 bottom-0">
         <div class="px-1 py-24 text-center w-full">
             <p class="opacity-60 font-dmsans">WELCOME TO CRONOS</p>
             <h1 class="mt-10">The Internet of<br>Blockchains.</h1>
